tdf#92510 Fix search in Expert Configuration dialog

When dialog find an appropriate entry, it will be insert and expanded
if it is a parent node.

Change-Id: Idab2823d1657acd32942177d8f674dbab3c0c8e7